# Car-advertising

./: README.md  build.sh  pyproject.toml
music_controller/: build.sh  db.sqlite3  manage.py
music_controller/api/: models.py  saves  serializers.py  urls.py  views.py
music_controller/api/migrations/: 0001_initial.py  0002_advert_alter_room_code.py  0003_advert_created_at_advert_host.py  0004_alter_advert_year.py  0005_alter_advert_host.py  0006_delete_room.py  0007_advert_colour_advert_description_advert_doors_and_more.py  0008_rename_engine_size_advert_engine.py  0009_remove_advert_created_at.py  0010_alter_advert_price.py  0011_advert_image.py  0012_alter_advert_image.py  0013_rename_image_advert_image1_advert_image2_and_more.py
music_controller/frontend/: package-lock.json  package.json  urls.py
music_controller/frontend/src/components/: Advertise.js  App.js  CreateRoomPage.js  HomePage.js  Login.js  Myads.js  Register.js  Room.js  RoomJoinPage.js  Search.js  User.js
music_controller/frontend/static/css/: index.css
music_controller/frontend/static/frontend/: main.js  main.js.LICENSE.txt
music_controller/music_controller/: settings.py  urls.py
