[tool.poetry]
name = "music-controller"
version = "0.1.0"
description = ""
authors = ["Stephen Byrne <sdavidbyrne@gmail.com>"]
readme = "README.md"
packages = [{include = "music_controller"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
