[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Stephen Byrne <sdavidbyrne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
dj-database-url = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
